Updated changelist and MetaDeta.

--- a/va2/docs/Changes.txt
+++ b/va2/docs/Changes.txt
@@ -1,6 +1,11 @@
+28 MAR 2020 - Version [a.1.0]:
+
 27 MAR 2020 - Version [a.0.1]:
--Changed webbed oak display symbol from & -> * to differentiate it further from the Tangled Portal.
--Fixed a bug where player equipment would remain degraded between characters.
--Reduced the frequency of automatic saving by a factor of 8.
+ [Bug Fix]:
+  -Fixed a bug where player equipment would remain degraded between characters.
+ [Change]:
+  -Changed webbed oak display symbol from & -> * to differentiate it further from the Tangled Portal.
+  -Reduced the frequency of automatic saving by a factor of 8.
+
 27 MAR 2020 - Version [a.0.0]:
--Initial release!
+  -Initial release!
