--- a/va2/docs/Changes.txt
+++ b/va2/docs/Changes.txt
@@ -2,6 +2,8 @@ TBD - Version [a.2.0]:
  [Change]
   -Text screens no longer attempt to redraw themselves unless a meaningful change has taken place.
   -User profile now remembers last session's display settings (e.g. fullscreen and graphical modes)
+  -Player now moves before all monsters.
+  -Messages now display with the player message on top, and only attempt to display since last player action. Overflow indicates that more messages are available, which appear as before in Message Recall.
 
 29 MAR 2020 - Version [a.1.0]:
  [Bug Fix]:
